--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "18.2.0",
+    "react-modal-video": "^2.0.1",
+    "react-player": "^2.14.1",
     "sweetalert2": "^11.4.19",
     "sweetalert2-react-content": "^5.0.0",
     "swiper": "^8.2.4"
