--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^0.27.2",
+    "cloudinary": "^1.41.3",
     "fslightbox-react": "^1.6.2-2",
+    "mongoose": "^8.1.1",
     "next": "12.1.6",
     "nodemailer": "^6.7.5",
     "nodemailer-sendgrid-transport": "^0.2.0",
@@ -20,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-modal-video": "^2.0.1",
     "react-player": "^2.14.1",
+    "react-quill": "^2.0.0",
     "sweetalert2": "^11.4.19",
     "sweetalert2-react-content": "^5.0.0",
     "swiper": "^8.2.4"
