--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/material": "^5.15.6",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "fslightbox-react": "^1.6.2-2",
+    "jodit-react": "^4.0.9",
     "next": "12.1.6",
     "nodemailer": "^6.7.5",
     "nodemailer-sendgrid-transport": "^0.2.0",
@@ -20,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-modal-video": "^2.0.1",
     "react-player": "^2.14.1",
+    "react-quill": "^2.0.0",
     "sweetalert2": "^11.4.19",
     "sweetalert2-react-content": "^5.0.0",
     "swiper": "^8.2.4"
