--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "cloudinary": "^1.41.3",
     "fslightbox-react": "^1.6.2-2",
     "jodit-react": "^4.0.9",
+    "multer": "^1.4.5-lts.1",
     "next": "12.1.6",
+    "next-cloudinary": "^5.20.0",
     "nodemailer": "^6.7.5",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "18.2.0",
